[project]
name = "predictions"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas Nel",email = "lukas@lotushealth.ai"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "modal (>=1.2.3,<2.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "openai-harmony (>=0.0.8,<0.0.9)",
    "tavily-python (>=0.7.13,<0.8.0)",
    "accelerate (>=1.11.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
